# ubicatec

./: .gitignore  README.md  handler.py  models.py  package-lock.json  package.json  pyproject.toml  script.py  serverless.yml  utils.py
.devcontainer/: devcontainer.json
data/: event.json  event2.json  sensor.json
migrations/: env.py
migrations/versions/: 6def08de80a3_add_location_fields_to_sensor_model.py  850699ff3c74_create_temperature_table.py  91084f7da5a5_add_humidity_to_temperature_model.py  9b9d83df0200_.py  aba36ba80508_.py  cee06d557493_add_index_to_mac_address.py
templates/: about.html.jinja2  index.html.jinja2
