[tool.poetry]
name = "iot-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "iot_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
boto3 = "^1.26.13"
sqlmodel = "^0.0.8"
pymysql = "^1.0.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
alembic = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
